# web_api

./: .env  Cargo.toml  README.md
src/: main.rs  user.rs
src/cats/: cat_model.rs  cat_mutation.rs  cat_query.rs  cat_service.rs  mod.rs
src/graphql/: root.rs
src/model/: context.rs  root.rs
src/test/: model.rs  service.rs
src/user/: model.rs  user_model.rs  user_query.rs  user_service.rs
