[package]
name = "web_api"
version = "0.1.0"
authors = ["Radim <radim.janos@apitree.cz>"]
edition = "2018"

[dependencies]
juniper = "0.14"
juniper_iron = "0.6.1"
iron = "0.6.1"
logger = "0.4.0"  
mount = "0.4.0"
serde = "1.0 "
mongodb = "0.9"
bson = "0.14"
dotenv = "0.15"
log = "0.4.0"
env_logger = "0.7.1"